package com.keunwon.jpashop.domain;

public enum DeliveryStatus {
    READY, COMP;
}
